force-app/main/default/objects/Volunteer_Skill__c/Volunteer_Skill__c.object-meta.xml
<CustomObject>
    <description>Used for recording volunteer skills like CPR etc.</description>
    <label>Volunteer Skill</label>
    <nameField>
        <displayFormat>VS - {00000}</displayFormat>
        <label>Volunteer Skill ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Volunteer Skills</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>