force-app/main/default/objects/Volunteer_Skill__c/fields/License__c.field-meta.xml
<CustomField>
    <fullName>License__c</fullName>
    <label>License</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ACT</fullName>
            </value>
            <value>
                <fullName>NSW</fullName>
            </value>
            <value>
                <fullName>NT</fullName>
            </value>
            <value>
                <fullName>QLD</fullName>
            </value>
            <value>
                <fullName>QLD Exempt</fullName>
            </value>
            <value>
                <fullName>SA (Police Check)</fullName>
            </value>
            <value>
                <fullName>SA DCSI</fullName>
            </value>
            <value>
                <fullName>Stat Dec (Requires SCO Approval)</fullName>
            </value>
            <value>
                <fullName>TAS</fullName>
            </value>
            <value>
                <fullName>VIC</fullName>
            </value>
            <value>
                <fullName>VIC Police &amp; Teacher</fullName>
            </value>
            <value>
                <fullName>WA</fullName>
            </value>
            <value>
                <fullName>WWCC type</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>