force-app/main/default/objects/Volunteer_Skill__c/fields/Skill_Description__c.field-meta.xml
<CustomField>
    <fullName>Skill_Description__c</fullName>
    <label>Skill Description</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Anaphalaxis Training</fullName>
            </value>
            <value>
                <fullName>Blue Card (QLD) Registration No &amp; Exp Date</fullName>
            </value>
            <value>
                <fullName>Dr Indemnity Insurance Policy No/Expiry</fullName>
            </value>
            <value>
                <fullName>First Aid</fullName>
            </value>
            <value>
                <fullName>CPR</fullName>
            </value>
            <value>
                <fullName>Food Handling Training</fullName>
            </value>
            <value>
                <fullName>Health Practitioner Registration No &amp; Exp Date</fullName>
            </value>
            <value>
                <fullName>Lifeguard</fullName>
            </value>
            <value>
                <fullName>Ochre Card (NT) Registration Number &amp; Exp Date</fullName>
            </value>
            <value>
                <fullName>Police Check (SA) Releasable Record &amp; Exp Date</fullName>
            </value>
            <value>
                <fullName>RSA</fullName>
            </value>
            <value>
                <fullName>WWCC/Police Check</fullName>
            </value>
            <value>
                <fullName>WWCC (NSW) Validation No &amp; Exp Date</fullName>
            </value>
            <value>
                <fullName>WWCC (TAS/WA/VIC/ACT) Card No &amp; Exp Date</fullName>
            </value>
            <value>
                <fullName>WWC Stat Dec (JPNo, NextCheck)</fullName>
            </value>
            <value>
                <fullName>Driver&apos;s License</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>