force-app/main/default/objects/Volunteer_Skill__c/fields/Volunteer_Skill_Id__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Skill_Id__c</fullName>
    <externalId>true</externalId>
    <label>Volunteer Skill Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>