force-app/main/default/objects/Volunteer_Skill__c/recordTypes/Volunteer_Skill.recordType-meta.xml
<RecordType>
    <fullName>Volunteer_Skill</fullName>
    <active>true</active>
    <label>Volunteer Skill</label>
</RecordType>