force-app/main/default/objects/Volunteer_Skill__c/recordTypes/Working_With_Children_Check.recordType-meta.xml
<RecordType>
    <fullName>Working_With_Children_Check</fullName>
    <active>true</active>
    <label>Working With Children Check</label>
</RecordType>