force-app/main/default/objects/Volunteer_Skill__c/listViews/X1_All.listView-meta.xml
<ListView>
    <fullName>X1_All</fullName>
    <columns>NAME</columns>
    <columns>Volunteer__c</columns>
    <columns>License__c</columns>
    <columns>Expires__c</columns>
    <filterScope>Everything</filterScope>
    <label>1. All</label>
</ListView>