force-app/main/default/objects/Volunteer_Skill__c/listViews/X2_All_Due_to_expire_in_the_next_30_days.listView-meta.xml
<ListView>
    <fullName>X2_All_Due_to_expire_in_the_next_30_days</fullName>
    <columns>NAME</columns>
    <columns>Volunteer__c</columns>
    <columns>License__c</columns>
    <columns>Expires__c</columns>
    <columns>Skill_Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Expires__c</field>
        <operation>equals</operation>
        <value>THIS_MONTH</value>
    </filters>
    <label>2. All Due to Expire in the Next 30 Days</label>
</ListView>