force-app/main/default/objects/Volunteer_Skill__c/listViews/X3_All_Expired_Skills.listView-meta.xml
<ListView>
    <fullName>X3_All_Expired_Skills</fullName>
    <columns>NAME</columns>
    <columns>Volunteer__c</columns>
    <columns>Expires__c</columns>
    <columns>License__c</columns>
    <columns>Comments__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Expires__c</field>
        <operation>lessOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <label>3. All Expired Skills</label>
</ListView>